Header + Footer + MvP Main Page

--- a/src/App.css
+++ b/src/App.css
@@ -1,292 +1,6 @@
 body {
-	background-color: #e4e4e4;
-	width: 100%;
-	height: 100%;
-}
-
-.order {
-	background: #e5e5e5;
-	border: 1px solid #d9ebe8;
-	padding: 10px;
-	margin-top: 20px;
-}
-
-.order-detail {
-	background: #fff;
-	float: left;
-	width: 175px;
-	border: 1px solid #8cb0aa;
-	border-radius: 6px;
-	margin: 10px;
-	padding: 10px;
-}
-
-h4 {
-	text-align: center;
-}
-
-.clear {
-	clear: both;
-}
-
-.total {
-	margin: 10px;
-}
-
-.addButton {
-	float: left;
-}
-
-.removeButton {
-	float: right;
-}
-
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
-
-.cardsView {
-	display: flex;
-	flex-direction: row;
-	width: 100%;
-	flex-wrap: wrap;
-	margin: auto;
-}
-
-.listView {
-	display: flex;
-	flex-direction: column;
-}
-
-.shopItem.card {
-	display: flex;
-	flex-direction: column;
-	max-width: 200px;
-	border: 1px solid black;
-	background-color: #f5f5f5;
-	margin: 40px;
-	padding: 20px;
-}
-
-.shopItem.list {
-	display: flex;
-	flex-direction: row;
-	max-height: 50px;
-	border: 1px solid white;
-	border-bottom: 0;
-	background-color: #f5f5f5;
-	margin: 0 40px;
-	padding: 20px;
-}
-
-.shopItem-title {
-	text-transform: uppercase;
-}
-
-.shopItem-title {
-	display: flex;
-	margin-left: auto;
-	margin-right: auto;
-	font-size: 20px;
-	font-weight: bold;
-	align-self: center;
-}
-
-.shopItem-title.list {
-	font-size: 25px;
-}
-
-.shopItem-color {
-	display: flex;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 10px;
-	color: darkgray;
-	align-self: center;
-}
-
-.shopItem-container {
-	display: flex;
-	flex-direction: row;
-	margin: 10px auto;
-	align-self: center;
-}
-
-.shopItem-img.list {
-	width: 80px;
-	height: 80px;
-	margin-top: -20px;
-}
-
-.addButton {
-	appearance: none;
-	border: 0;
-	border-radius: 5px;
-	background: #149763;
-	color: #fff;
-	padding: 8px 16px;
-	font-size: 16px;
-}
-
-.removeButton {
-	appearance: none;
-	border: 0;
-	border-radius: 5px;
-	background: #bb3d50;
-	color: #fff;
-	padding: 8px 16px;
-	font-size: 16px;
-}
-
-.removeButton:hover {
-	color: white;
-	background-color: rgb(239, 110, 110);
-}
-
-.shopItem-container.list>.addButton {
-	margin-left: 60px;
-}
-
-.addButton:hover {
-	color: white;
-	background-color: rgb(117, 213, 118);
-}
-
-.shopItem-price {
-	align-self: center;
-	color: red;
-	font-weight: bold;
-}
-
-.material-icons {
-	cursor: pointer;
-	margin-left: auto;
-	margin-right: 40px;
-}
-
-.mainContainer {
-	display: flex;
-	flex-direction: column;
-	margin-top: 20px;
-}
-
-
-.cred-wrapper {
-	width: 256px;
-	height: 184px;
-
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	/* gap: 16px; */
-
-	background-color: #FFFFFF;
-	border-radius: 16px;
-	box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, .25);
-
-	margin-left: calc(50vw - 128px);
-	margin-top: calc(50vh - 92px);
-}
-
-.cred-wrapper input {
-	border-radius: 4px;
-	border: 1px solid black;
-}
-
-input.error {
-	border: 1px solid red;
-}
-
-.error:focus {
-	outline: 2px solid red;
-}
-
-.error-message {
-	display: none;
-	font-size: 12px;
-	text-align: center;
-	color: #df2929;
-}
-
-.button {
-	width: 64px;
-	height: 24px;
-
-	border: none;
-	border-radius: 8px;
-	background-color: #86cf96;
-
-	font-weight: 600;
-	color: #FFFFFF;
-
-	margin-top: 16px;
-	padding: 0;
-}
-
-.button.order {
-	width: 128px;
-	height: 48px;
-
-	font-size: 24px;
-	text-align: center;
-
-	margin-bottom: 16px;
-	margin-left: calc(20vw - 64px);
-}
-
-.button:hover {
-	cursor: pointer;
-	background-color: #439c56;
-}
-
-.nav {
-	display: flex;
-	gap: 16px;
-}
-
-.cred-wrapper.big {
-	display: grid;
-	grid-template-rows: 1fr 1fr;
-	width: 800px;
-	height: 384px;
-
-	margin-left: calc(50vw - 400px);
-	margin-top: calc(50vh - 300px);
-}
-
-.paragraph-wrapper {
-	display: grid;
-	/* flex-direction: row; */
-	grid-template-columns: 1fr 1fr 1fr;
-	gap: 24px;
-
-	margin: 32px;
-}
-
-.cred-wrapper.paragraph {
-	display: flex;
-	visibility: hidden;
-	width: 228px;
-	height: 184px;
-
 	margin: 0;
-}
+	padding: 0;
 
-.paragraph-selector {
-   	justify-self: center;
-	-webkit-appearance: none;
-  	-moz-appearance: none;
-
-	width: 56px;
-	height: 56px;
-
-	font-size: 42px;
-	text-align: center;
-
-	background-color: #FFFFFF;
-	border: none;
-	border-radius: 16px;
-	box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, .25);
-
-	/* margin-bottom: 64px; */
-	padding-right: 2px;
+	background-color: #F6F6F2;
 }
